# CS676_Algorithms-for-Data-Science

./: README.md
Project 1 -  Credibility Score for articles/: Deliverable 1.1.py  Deliverable 1.py  Deliverable 2.py  requirements.txt
Project 1 -  Credibility Score for articles/Deliverable 3/: .gitignore  credibility_analyzer.py  main.py  openai_handler.py  pyproject.toml  requirements.txt
Project 1 -  Credibility Score for articles/Deliverable 3/.github/workflows/: pipeline.yml
Project 1 -  Credibility Score for articles/Deliverable 3/tests/: test_analyzer.py
Project 2 - TinyTroupe/Deliverable 1/: Deliverable 1.py
Project 2 - TinyTroupe/Deliverable 2/: .gitignore  README.md  main.py  requirements.txt
Project 2 - TinyTroupe/Deliverable 3/: .gitignore  agent_config.py  app.py  requirements.txt  utils.py
Project 2 - TinyTroupe/Deliverable 3/.devcontainer/: devcontainer.json
Project 2 - TinyTroupe/Deliverable 3/.github/workflows/: python-test.yml
Project 2 - TinyTroupe/Deliverable 3/tests/: test_utils.py
